--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SlideShow</title>
 </head>
+
 <body>
-    
+    <div class="slide-show">
+        <div class="list-images">
+            
+        </div>
+    </div>
 </body>
 </html>
