--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
     <title>SlideShow</title>
 </head>
 
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
+    }
+</style>
+
 <body>
     <div class="slide-show">
         <div class="list-images">
-            
+
         </div>
     </div>
 </body>
