--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
         padding: 0;
         font-family: Arial, sans-serif;
     }
+
+    .slide-show {
+        background-color: aqua;
+        width: 100%;
+        height: 100vh;
+        overflow: hidden;
+        position: relative;
+    }
 </style>
 
 <body>
