--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         margin: 0;
         padding: 0;
         font-family: Arial, sans-serif;
+        height: 600px;
     }
 
     .slide-show {
         background-color: aqua;
-        width: 100%;
-        height: 100vh;
-        overflow: hidden;
-        position: relative;
+        width: 500px;
+        display: flex; 
+        justify-content: center;   
     }
 </style>
 
