--- a/index.html
+++ b/index.html
@@ -12,20 +12,22 @@
         padding: 0;
         font-family: Arial, sans-serif;
         height: 600px;
+        display: flex; 
+        justify-content: center; 
     }
 
     .slide-show {
-        background-color: aqua;
         width: 500px;
-        display: flex; 
-        justify-content: center;   
     }
 </style>
 
 <body>
     <div class="slide-show">
         <div class="list-images">
-
+            <img src="https://www.mickeyshannon.com/photos/zoom/crete-senesi-sunset.jpg" width="100%" alt="1">
+            <img src="https://www.mickeyshannon.com/photos/zoom/daybreak-at-alpe-di-siusi.jpg" width="100%" alt="2">
+            <img src="https://www.mickeyshannon.com/photos/zoom/pearl-of-the-adriatic.jpg" width="100%" alt="3">
+            <img src="https://www.mickeyshannon.com/photos/zoom/podere-belvedere-sunrise.jpg" width="100%" alt="4">
         </div>
     </div>
 </body>
