--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     .slide-show {
         width: 500px;
+        overflow: hidden;
     }
 
     .list-images {
@@ -34,5 +35,6 @@
             <img src="https://www.mickeyshannon.com/photos/zoom/podere-belvedere-sunrise.jpg" width="100%" alt="4">
         </div>
     </div>
+    <script src="./index.js"></script>
 </body>
 </html>
