--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
             <img src="https://www.mickeyshannon.com/photos/zoom/pearl-of-the-adriatic.jpg" width="100%" alt="3">
             <img src="https://www.mickeyshannon.com/photos/zoom/podere-belvedere-sunrise.jpg" width="100%" alt="4">
         </div>
+
+        <div class="btns">
+            <div class="btn-left">
+
+            </div>
+            <div class="btn-right">
+            
+            </div>
+        </div>
     </div>
     <script src="./index.js"></script>
 </body>
