--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         </div>
 
         <div class="btns">
-            <div class="btn-left">
+            <div class="btn-left btn">
 
             </div>
-            <div class="btn-right">
+            <div class="btn-right btn">
             
             </div>
         </div>
