--- a/index.html
+++ b/index.html
@@ -38,12 +38,8 @@
         </div>
 
         <div class="btns">
-            <div class="btn-left btn">
-
-            </div>
-            <div class="btn-right btn">
-            
-            </div>
+            <div class="btn-left btn"><i class='bx bx-chevron-left'></i></div>
+            <div class="btn-right btn"></div>
         </div>
     </div>
     <script src="./index.js"></script>
