--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <div class="btns">
             <div class="btn-left btn"><i class='bx bx-chevron-left'></i></div>
-            <div class="btn-right btn"></div>
+            <div class="btn-right btn"><i class='bx bx-chevron-right' ></i></div>
         </div>
     </div>
     <script src="./index.js"></script>
