--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         display: flex;
         transition: 0.5s;
     }
+    .btns {
+        font-size: 40px;
+        color: #999;
+    }
 </style>
 
 <body>
