--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     .slide-show {
         width: 500px;
         overflow: hidden;
+        position: relative;
     }
 
     .list-images {
@@ -29,6 +30,8 @@
     .btns {
         font-size: 40px;
         color: #999;
+        position: absolute;
+
     }
 </style>
 
