--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
         display: flex;
         transition: 0.5s;
     }
-    .btns {
+    .btn {
         font-size: 40px;
         color: #999;
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
+    }
+    .btn-left {
+        left: 0;
     }
 </style>
 
