--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
+        transition: 0.5s;
     }
     .btn-left {
         left: 0;
