--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         display: flex;
         transition: 0.5s;
     }
+    .btn:hover {
+        color: white;
+    }
     .btn {
         font-size: 40px;
         color: #999;
