--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         top: 50%;
         transform: translateY(-50%);
         transition: 0.5s;
-        cursor: button;
+        cursor: pointer;
     }
     .btn-left {
         left: 0;
